# passvault

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  go.mod  go.sum  main.go
cmd/: change-master.go  create.go  delete.go  export.go  get.go  list.go  reset.go  root.go  update.go
internal/: crypto.go  db.go
src/: cli.rs  commands.rs  crypto.rs  db.rs  errors.rs  main.rs  utils.rs
