[package]
name = "passvault"
description = "A minimal and secure password manager written in Rust"
version = "0.2.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/anmhrk/passvault"
license = "MIT"
keywords = ["password manager", "cli"]

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rpassword = "7.3"
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
dirs = "5.0"
arboard = "3.6.0"
passwords = "3.1"
zxcvbn = "3.1"
